# maps_liptov

./: .gitignore  README.md  pyproject.toml
data/: colors.csv  colors.xlsx  dochadzka_zamestnanie_sodb_2001.csv  dochadzka_zamestnanie_sodb_2011.csv  liptov_obce.csv  sodb_2021_dochadzka_denne_lm_rk.csv  test.csv  test1.csv  vzdialenost_obce.csv  vzdialenost_obce.xlsx
data/geo/: liptov.dbf  liptov.geojson  liptov.qmd  liptov.shp  liptov.shx  liptov_okresy.dbf  liptov_okresy.qmd  liptov_okresy.shp  liptov_okresy.shx
notebooks/: comparison.ipynb  complex_map.ipynb  maps.ipynb  maps_2001.ipynb  maps_2011.ipynb  maps_2021.ipynb  test.ipynb
