[project]
name = "maps_liptov"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Belokhonov",email = "dbelohonov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "mapclassify (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

